--- a/styles.css
+++ b/styles.css
@@ -48,10 +48,15 @@
 
 
 ul {
+	cursor: pointer;
+  position: relative;
+  padding: 12px 8px 12px 40px;
+  list-style-type: none;
+  font-size: 18px;
+  transition: 0.2s;
 	list-style-type: none;
-}
-
-
-li.checked {
-	text-decoration: line-through;
+	-webkit-user-select: none;
+  	-moz-user-select: none;
+  	-ms-user-select: none;
+    user-select: none;
 }
