--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,36 @@
 	top:1px;
 }
 
+#resetButton {
+	box-shadow:inset 0px 1px 0px 0px #efabab;
+	background:linear-gradient(to bottom, #d42a2a 5%, #b81111 100%);
+	background-color:#d42a2a;
+	border-radius:6px;
+	border:1px solid #8a1a16;
+	display:inline-block;
+	cursor:pointer;
+	color:#000000;
+	font-family:Arial;
+	font-size:15px;
+	font-weight:bold;
+	padding:6px 24px;
+	text-decoration: none;
+	text-shadow:0px 1px 0px #de7c7c;
+}
+#resetButton:hover {
+	background:linear-gradient(to bottom, #b81111 5%, #d42a2a 100%);
+	background-color:#b83811;
+}
+#resetButton:active {
+	position:relative;
+	top:1px;
+}
+
+
+#removeButton {
+	margin-left: 5px;
+}
+
 
 #inputItem {
 	padding: 5px;
