--- a/styles.css
+++ b/styles.css
@@ -1,45 +1,82 @@
 .container {
 	display: flex;
+	position: relative;
 	justify-content: center;
-	padding-top: 100px;
-	
+	display: flex;
+	margin: 0px auto;
+	max-width: 700px;
+	padding-bottom: 10px;
+
+/* From https://css.glass */
+background: rgba(245, 243, 233, 0.41);
+border-radius: 16px;
+box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+backdrop-filter: blur(10.1px);
+-webkit-backdrop-filter: blur(10.1px);
+border: 1px solid rgba(245, 243, 233, 0.52);
 }
 
+
 body {
-	background-color: #efabab;
+	background: linear-gradient(to right, #BF6330, #625185);
+	margin-top: 30px;
+}
+
+h1 {
+	text-align: center;
+}
+
+select {
+	padding: 5px;
+	font-size: 16px;
+	border-width: 1px;
+	border-color: #ffffff;
+	background-color: rgb(255, 255, 255);
+	color: #000000;
+	border-style: solid;
+	border-radius: 6px;
+	box-shadow: 0px 0px 5px rgba(66,66,66,.75);
+	text-shadow: 0px 0px 1px rgba(66,66,66,.0);
+	display: flex;
+	margin: 0px auto;
+	margin-bottom: 10px;
 }
 
 #submitButton {
-	box-shadow:inset 0px 1px 0px 0px #caefab;
-	background:linear-gradient(to bottom, #77d42a 5%, #5cb811 100%);
+	box-shadow:inset 0px 1px 0px 0px #a5e4c7;
+	background:linear-gradient(to bottom, #86C1A5 5%, #6B9A84 100%);
 	background-color:#77d42a;
 	border-radius:6px;
-	border:1px solid #268a16;
+	border:1px solid #517765;
 	display:inline-block;
 	cursor:pointer;
 	color:#000000;
 	font-family:Arial;
 	font-size:15px;
 	font-weight:bold;
+	margin-left: 5px;
 	padding:6px 24px;
 	text-decoration:none;
-	text-shadow:0px 1px 0px #aade7c;
+	text-shadow:0px 1px 0px #6B9A84;
+	
 }
 #submitButton:hover {
-	background:linear-gradient(to bottom, #5cb811 5%, #77d42a 100%);
+	background:linear-gradient(to bottom, #6B9A84 5%, #86C1A5 100%);
 	background-color:#5cb811;
 }
+
 #submitButton:active {
 	position:relative;
 	top:1px;
 }
 
 #resetButton {
-	box-shadow:inset 0px 1px 0px 0px #efabab;
-	background:linear-gradient(to bottom, #d42a2a 5%, #b81111 100%);
+	margin-left: 5px;
+	box-shadow:inset 0px 1px 0px 0px #cc8f6e;
+	background:linear-gradient(to bottom, #BF6330 5%, #864522 100%);
 	background-color:#d42a2a;
 	border-radius:6px;
-	border:1px solid #8a1a16;
+	border:1px solid #864522;
 	display:inline-block;
 	cursor:pointer;
 	color:#000000;
@@ -48,52 +85,79 @@ body {
 	font-weight:bold;
 	padding:6px 24px;
 	text-decoration: none;
-	text-shadow:0px 1px 0px #de7c7c;
+	text-shadow:0px 1px 0px #864522;
 }
+
+
 #resetButton:hover {
-	background:linear-gradient(to bottom, #b81111 5%, #d42a2a 100%);
-	background-color:#b83811;
+	background:linear-gradient(to bottom, #864522 5%, #BF6330 100%);
+	background-color:#864522;
 }
+
 #resetButton:active {
 	position:relative;
 	top:1px;
 }
 
+#clearButton {
+	box-shadow:inset 0px 1px 0px 0px #dfcea8;
+	background:linear-gradient(to bottom, #f5d386 5%, #E3A924 100%);
+	background-color:#E3A924;
+	border-radius:6px;
+	border:1px solid #ac811c;
+	margin: 0 auto;
+	cursor:pointer;
+	color:#000000d5;
+	font-family:Arial;
+	font-size:15px;
+	font-weight:bold;
+	padding:6px 24px;
+	text-decoration: none;
+	text-shadow:0px 1px 0px #E3A924;
+}
+
+#clearButton:hover {
+	background:linear-gradient(to bottom, #E3A924 5%, #f5d386 100%);
+	background-color:#b83811;
+	
+}
+#clearButton:active {
+	position:relative;
+	top:1px;
+}
 
 #removeButton {
+	border-radius: 3px;
+	font-weight: bold;
+	background-color: goldenrod;
 	margin-left: 5px;
 }
 
-
-#inputItem {
+#inputField {
 	padding: 5px;
 	font-size: 16px;
 	border-width: 1px;
 	border-color: #ffffff;
-	background-color: rgb(189, 70, 70);
+	background-color: rgb(255, 255, 255);
 	color: #000000;
 	border-style: solid;
 	border-radius: 6px;
 	box-shadow: 0px 0px 5px rgba(66,66,66,.75);
 	text-shadow: 0px 0px 1px rgba(66,66,66,.0);
-
 }
 
 
 
-ul {
+#listUl {
 	cursor: pointer;
   position: relative;
-  padding: 12px 8px 12px 40px;
+  padding: 12px 0px 12px 40px;
   list-style-type: none;
   font-size: 18px;
-  transition: 0.2s;
 	list-style-type: none;
-	-webkit-user-select: none;
-  	-moz-user-select: none;
-  	-ms-user-select: none;
     user-select: none;
 }
+
 
 
 .checked {
